# Jason-in-the-Loop

./: .gitignore  README.md
Orci/FirstTry/: Cargo.toml
Orci/FirstTry/src/: main.rs
Orci/Space_Invaders_Tuto/src/: components.rs  main.rs  player.rs
eliott/Sprite/: Cargo.toml
game/: Cargo.toml  platform.json
game/assets/platforms_files/: platform.json
game/assets/textures/oak_woods_v1.0/background/background_game/background_format_xcf/: background_3 2.xcf  background_3_sans_grotte 3.xcf  background_4 3.xcf  background_6 2.xcf  background_layer_5 3.xcf  background_layer_5.xcf
game/src/: camera.rs  collisions.rs  components.rs  enemy.rs  main.rs  platforms.rs  player.rs  player_loop.rs
jimmy/test_j1/test_example1/: Cargo.toml
jimmy/test_j1/test_example1/src/: main.rs
jimmy/test_jimmy/: Cargo.toml
jimmy/test_jimmy/src/: main.rs
