[package]
name = "FirstTry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3